--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_Dev_Final_Project"
         tools:targetApi="31">
+
+        <!-- HomeActivity is the entry point, no changes needed -->
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
+
+        <!-- Registration and Login Activities -->
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -19,15 +26,31 @@
             android:name=".LoginActivity"
             android:exported="false"
             android:label="Login" />
+
+        <!-- Activities for Notifications, Tasks, Statistics, and Profile -->
+        <activity
+            android:name=".NotificationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name=".TasksActivitys"
+            android:exported="true" />
+        <activity
+            android:name=".StatisticsActivity"
+            android:exported="true" />
+
+        <!-- MainActivity is the launcher activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
